--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "start:electron": "ng build --base-href ./ && tsc -p tsconfig.electron.json && electron ."
+
+    "build:dev": "concurrently \"ng build --delete-output-path=false --watch\" \"webpack --config webpack.electron.dev.config.js --watch\"",
+    "start:dev": "electron dist/shell.js",
+    "build:prod": "ng build --optimization --outputHashing=all --sourceMap=false --namedChunks=false --extract-licenses --vendorChunk=false --build-optimizer && webpack --config webpack.electron.prod.config.js",
+    "start:prod": "electron dist/main.js"
   },
-  "main": "main.js",
   "description": "断面照査プログラム",
   "author": {
     "name": "sasaco",
@@ -63,7 +66,7 @@
     "@angular/cli": "~12.2.7",
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
-    "@types/node": "^12.11.1",
+
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
@@ -77,6 +80,18 @@
     "inquirer": "^6.2.2",
     "inquirer-autocomplete-prompt": "^1.0.1",
     "open": "^7.0.3",
-    "jsonc-parser": "^3.0.0"
+    "jsonc-parser": "^3.0.0",
+
+    "@types/node": "^14.15.5",
+
+    "ngx-electron": "^2.2.0",
+    "ts-loader": "^9.2.5",
+    "concurrently": "^6.2.1",
+    "electron": "^13.2.0",
+    "electron-log": "4.4.1",
+    "electron-packager": "^15.3.0",
+    "webpack-cli": "^4.8.0",
+    "webpack-node-externals": "^3.0.0"
+
   }
 }
