--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-
     "build:dev": "concurrently \"ng build --delete-output-path=false --watch\" \"webpack --config webpack.electron.dev.config.js --watch\"",
     "start:dev": "electron dist/shell.js",
     "build:prod": "ng build --optimization --outputHashing=all --sourceMap=false --namedChunks=false --extract-licenses --vendorChunk=false --build-optimizer && webpack --config webpack.electron.prod.config.js",
@@ -46,6 +45,7 @@
     "@types/file-saver": "^2.0.3",
     "@types/jquery": "^3.5.6",
     "@types/jqueryui": "^1.12.16",
+    "angular-cli-ghpages": "^1.0.0",
     "bootstrap": "^4.5.0",
     "encoding-japanese": "^1.0.30",
     "file-saver": "^2.0.5",
@@ -65,7 +65,6 @@
     "@angular/cli": "~12.2.7",
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
-
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
@@ -80,9 +79,7 @@
     "inquirer-autocomplete-prompt": "^1.0.1",
     "open": "^7.0.3",
     "jsonc-parser": "^3.0.0",
-
     "@types/node": "^14.15.5",
-
     "ngx-electron": "^2.2.0",
     "ts-loader": "^9.2.5",
     "concurrently": "^6.2.1",
@@ -91,6 +88,5 @@
     "electron-packager": "^15.3.0",
     "webpack-cli": "^4.8.0",
     "webpack-node-externals": "^3.0.0"
-
   }
 }
