--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web-dan-for-js",
-  "version": "1.0.1",
+  "version": "1.9.2",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --open",
@@ -10,8 +10,9 @@
     "e2e": "ng e2e",
     "build:dev": "concurrently \"ng build --delete-output-path=false --watch\" \"webpack --config webpack.electron.dev.config.js --watch\"",
     "start:dev": "electron dist/shell.js",
+    "electron:windows": "npm run build:prod && npx electron-builder build --windows",
     "build:prod": "ng build --optimization --outputHashing=all --sourceMap=false --namedChunks=false --extract-licenses --vendorChunk=false --build-optimizer && webpack --config webpack.electron.prod.config.js",
-    "start:prod": "electron dist/main.js"
+    "start:prod": "electron dist/index.js"
   },
   "description": "断面照査プログラム",
   "author": {
@@ -61,31 +62,32 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "@angular-devkit/architect": "^0.1200.0",
     "@angular-devkit/build-angular": "~12.2.7",
     "@angular/cli": "~12.2.7",
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
+    "@types/node": "^14.15.5",
+    "concurrently": "^6.2.1",
+    "electron": "^13.2.0",
+    "electron-builder": "^22.14.13",
+    "electron-log": "4.4.1",
+    "electron-packager": "^15.3.0",
+    "firebase-tools": "^9.0.0",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1",
     "jasmine-core": "~3.8.0",
+    "jsonc-parser": "^3.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.3.5",
-    "@angular-devkit/architect": "^0.1200.0",
-    "firebase-tools": "^9.0.0",
-    "fuzzy": "^0.1.3",
-    "inquirer": "^6.2.2",
-    "inquirer-autocomplete-prompt": "^1.0.1",
-    "open": "^7.0.3",
-    "jsonc-parser": "^3.0.0",
-    "@types/node": "^14.15.5",
     "ngx-electron": "^2.2.0",
+    "open": "^7.0.3",
     "ts-loader": "^9.2.5",
-    "concurrently": "^6.2.1",
-    "electron": "^13.2.0",
-    "electron-log": "4.4.1",
-    "electron-packager": "^15.3.0",
+    "typescript": "~4.3.5",
     "webpack-cli": "^4.8.0",
     "webpack-node-externals": "^3.0.0"
   }
