--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "pqgrid": "file:./paramquery-8.4.0/",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
+    "webpack": "^5.75.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
