署名を付与、コピーライトを変更、ngx-printを削除

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "e2e": "ng e2e",
     "build:dev": "concurrently \"ng build --delete-output-path=false --watch\" \"webpack --config webpack.electron.dev.config.js --watch\"",
     "start:dev": "electron dist/shell.js",
-    "electron:windows": "set NODE_OPTIONS=--openssl-legacy-provider && npm run build:prod && npx electron-builder build --windows",
+    "electron:windows": "npm run build:prod && npx electron-builder build --windows",
     "build:prod": "ng build --configuration production --optimization --outputHashing=all --sourceMap=false --namedChunks=false --extract-licenses --vendorChunk=false --build-optimizer && webpack --config webpack.electron.prod.config.js && npm run filecopy1 && npm run filecopy2",
     "start:prod": "electron dist/index.js",
     "filecopy1": "node -e \"require('fs').copyFileSync('dev-app-update.yml', 'dist/dev-app-update.yml')\"",
@@ -18,8 +18,8 @@
   },
   "description": "WebDanforJS",
   "author": {
-    "name": "sasaco",
-    "email": "sasaicco@gmail.com"
+    "name": "MALME INC.",
+    "email": "info@malme.co.jp"
   },
   "keywords": [
     "angular",
@@ -61,7 +61,6 @@
     "jquery": "^3.6.0",
     "jquery-ui-pack": "^1.12.3",
     "jszip": "^2.5.0",
-    "ngx-print": "^1.2.1",
     "pqgrid": "file:./paramquery-8.4.0/",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
