ひび割れの照査を省略してしまった不具合とヤング係数と施工係数の関係を修正

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "web-dan-for-js",
-  "version": "1.13.4",
+  "version": "1.13.5",
   "scripts": {
     "ng": "ng",
     "start": "set NODE_OPTIONS=--openssl-legacy-provider && ng serve",
-    "build": "ng build --configuration production --base-href \"https://structuralengine.github.io/WebDanforJS/\" && angular-cli-ghpages",
+    "build": "set NODE_OPTIONS=--openssl-legacy-provider && ng build --configuration production --base-href \"https://structuralengine.github.io/WebDanforJS/\" && angular-cli-ghpages",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
