--- a/angular.json
+++ b/angular.json
@@ -38,7 +38,11 @@
             "buildOptimizer": false,
             "sourceMap": true,
             "optimization": false,
-            "namedChunks": true
+            "namedChunks": true,
+            "allowedCommonJsDependencies": [
+              "pqgrid", 
+              "encoding-japanese"
+            ]
           },
           "configurations": {
             "production": {
@@ -97,7 +101,7 @@
             "karmaConfig": "src/karma.conf.js",
             "styles": [
               "src/styles.scss",
-              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
             ],
             "scripts": [
               "node_modules/@fortawesome/some-free/js/all.min.js"
