--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "^15.0.0",
     "@angular-devkit/architect": "^0.1502.7",
     "@angular-devkit/build-angular": "^15.2.7",
     "@angular/cli": "^15.2.7",
@@ -78,6 +79,7 @@
     "@types/jqueryui": "^1.12.16",
     "@types/node": "^14.15.5",
     "concurrently": "^6.2.1",
+    "css-loader": "^6.7.3",
     "electron": "^13.2.0",
     "electron-builder": "^22.14.13",
     "electron-log": "4.4.1",
@@ -95,9 +97,14 @@
     "karma-jasmine-html-reporter": "~1.7.0",
     "ngx-electron": "^2.2.0",
     "open": "^7.0.3",
+    "style-loader": "^3.3.2",
     "ts-loader": "^9.2.5",
     "typescript": "~4.9.5",
     "webpack-cli": "^4.8.0",
     "webpack-node-externals": "^3.0.0"
+  },
+  "engines" : { 
+    "npm" : ">=9.0.0 <10.0.0",
+    "node" : ">=18.0.0 <19.0.0"
   }
 }
