--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "jquery": "^3.6.0",
     "jquery-ui-pack": "^1.12.3",
     "jszip": "^3.10.1",
+    "keycloak-angular": "^13.1.0",
+    "keycloak-js": "^20.0.5",
     "ngx-print": "~1.2.1",
     "pqgrid": "file:./paramquery-8.4.0/",
     "print-js": "^1.6.0",
