--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
         run: npm install -g @angular/cli@12.2.7 && npm install
 
       - name: Build Angular app
-        run: npm run build-actions
+        run: npm run build
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
