--- a/.github/workflows/codesign.yml
+++ b/.github/workflows/codesign.yml
@@ -40,4 +40,4 @@ jobs:
           github_token: ${{ secrets.github_token }}
           release: ${{ startsWith(github.ref, 'refs/tags/v') }}
           windows_certs: ${{ secrets.CODESIGN }}
-
+          windows_certs_password: ${{ secrets.PASSWORD }}
