Using infragistics preview Excel file before download
Using NgModal show moal preview excel
the remaining problem: close button on top right, AutoShape is broken when preview

--- a/package.json
+++ b/package.json
@@ -57,6 +57,9 @@
     "encoding-japanese": "^1.0.30",
     "file-saver": "^2.0.5",
     "firebase": "^9.20.0",
+    "igniteui-angular-core": "^16.1.0",
+    "igniteui-angular-excel": "^16.1.0",
+    "igniteui-angular-spreadsheet": "^16.1.0",
     "jquery": "^3.6.0",
     "jquery-ui-pack": "^1.12.3",
     "jszip": "^3.10.1",
