--- a/.github/workflows/codesign.yml
+++ b/.github/workflows/codesign.yml
@@ -31,7 +31,7 @@ jobs:
           node-version: "18.16.0"
 
       - name: Install dependencies
-        run: npm install -g @angular/cli@12.2.7 && npm install
+        run: npm install --legacy-peer-deps
 
       - name: Build Windows app
         uses: samuelmeuli/action-electron-builder@v1.6.0
