--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
           node-version: "18.16.0"
 
       - name: Install dependencies
-        run: npm install --legacy-peer-deps
+        run: npm install -g @angular/cli@12.2.7 && npm install
 
       - name: Build Angular app
         run: npm run build-actions
