Create item menu open electron

--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
     "keycloak-angular": "^13.1.0",
     "keycloak-js": "^20.0.5",
     "nanoid": "^4.0.2",
+    "ngx-multi-modal": "^2.3.3",
+    "ngx-multi-window": "^0.6.0",
     "ngx-print": "~1.2.1",
     "pqgrid": "file:./paramquery-8.4.0/",
     "print-js": "^1.6.0",
