--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "description": "WebDanforJS",
   "author": {
     "name": "MALME INC.",
-    "email": "support@malme.app"
+    "email": "support@structuralengine.com"
   },
   "keywords": [
     "angular",
