--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve --host=127.0.0.1",
     "build": "ng build --configuration production --base-href \"https://webdan.malme.app/\" && npm run filecopy3 && angular-cli-ghpages",
-    "build-actions": "ng build --configuration production --base-href \"https://webdan.malme.app/\"",
+    "build-actions": "ng build --configuration production --base-href \"https://webdan.malme.app/\" && npm run filecopy3",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
