--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "web-dan-for-js",
+  "name": "web-dan-for-js-test",
   "version": "2.2.5",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --host=127.0.0.1",
-    "build": "ng build --configuration production --base-href \"https://webdan.malme.app/\" && npm run filecopy3 && angular-cli-ghpages",
-    "build-actions": "ng build --configuration production --base-href \"https://webdan.malme.app/\" && npm run filecopy3",
+    "build": "ng build --configuration production --base-href \"https://structuralengine.github.io/WebDanforJS_Test/\" && npm run filecopy3 && angular-cli-ghpages",
+    "build-actions": "ng build --configuration production --base-href \"https://structuralengine.github.io/WebDanforJS_Test\" && npm run filecopy3",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -20,7 +20,7 @@
     "electron:isas": "npm run build:isas && npx electron-builder build --windows",
     "build:isas": "ng build --configuration production --optimization --extract-licenses --build-optimizer && webpack --config webpack.electron.isas.config.js && npm run filecopy1 && npm run filecopy2"
   },
-  "description": "WebDanforJS",
+  "description": "WebDanforJS_Test",
   "author": {
     "name": "MALME INC.",
     "email": "support@structuralengine.com"
