--- a/app-update.yml
+++ b/app-update.yml
@@ -1,4 +1,4 @@
 owner: structuralengine
 repo: WebDanforJS
 provider: github
-updaterCacheDirName: web-dan-for-js-updater
+updaterCacheDirName: web-dan-for-js-test-updater
